XW-3295: fixing gap between dropdown toggle and content

--- a/style-guide/styles/wds-components/_buttons.scss
+++ b/style-guide/styles/wds-components/_buttons.scss
@@ -159,6 +159,10 @@
 		margin: -1px 0;
 	}
 
+	.wds-dropdown__content {
+		top: calc(100% + 1px);
+	}
+
 	$social-colors: (
 		facebook: $wds-color-social-facebook,
 		googleplus: $wds-color-social-googleplus,
