--- a/style-guide/styles/wds-components/_dropdowns.scss
+++ b/style-guide/styles/wds-components/_dropdowns.scss
@@ -23,7 +23,7 @@
 		display: none;
 		left: 0;
 		position: absolute;
-		top: calc(100% + 1px);
+		top: 100%;
 		z-index: $content-z-index;
 
 		&.wds-is-dark {
